Upload New Files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
-  
+  <link rel="stylesheet" href="assets/css/enhancements.css">
   <!-- Favicon -->
   <link rel="icon" href="assets/images/coffee-icon.png" type="image/png">
 </head>
@@ -333,6 +333,8 @@
     <span>☕</span>
     <span class="floating-text">Baca Bab 1</span>
   </button>
+
+<script src="assets/js/enhanced.js" defer></script>
 
 </body>
 </html>
